# aruco_id_checker

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
aruco_id_checker/: pose_publisher_node.py
launch/: pose_publisher.launch.py
resource/: aruco_id_checker
